--- a/templates/allitems.html
+++ b/templates/allitems.html
@@ -2,13 +2,13 @@
 {% block content %}
 {% include "header.html" %}
 
-<a href="{{url_for('newCategory')}}">New Category</a>
+<a href="{{url_for('newItem', category_name=category_name, category_id=category_id)}}">New Item</a>
 <br>
-<h3>Categories</h3>
+<h3>{{category_name}}</h3>
 
-{% for i in categories %}
+{% for i in items %}
 <div id="cat-1">
-<a href="{{url_for('allItems', category_name=i.name, category_id=i.id)}}"><p id="cat-2">{{i.name}}</p></a>
+<p id="cat-2">{{i.name}}</p>
 <a href="{{url_for('editCategory', category_name=i.name, category_id=i.id)}}">Edit</a>
 <a href="{{url_for('deleteCategory', category_name=i.name, category_id=i.id)}}">Delete</a>
 </div>
