--- a/templates/newcategory.html
+++ b/templates/newcategory.html
@@ -8,5 +8,7 @@
 <input type='text' placeholder="Category Name" size='30' name='name'>
 <input type='submit' value='Create'>
 </form>
+<br>
+<a href = "{{ url_for('allCategories')}}">Cancel</a>
 
 {% endblock %}
