--- a/templates/header.html
+++ b/templates/header.html
@@ -1,10 +1,13 @@
-<div class="row top-menu">
-	<div class="col-md-6">
-		<a href="{{url_for('allCategories')}}">
-			<span class="glyphicon glyphicon-home" aria-hidden="true"></span> Show All Restaurants
+<div id="hallo" class="row top-menu">
+	<div id="hallo2" class="col-md-6">
+		<h1>Catalog App</h1>
+		<a id="head-menu-left" href="{{url_for('allCategories')}}">
+			<span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home
 		</a>
 	</div>
-	<div class="col-md-6 text-right">
-		<p>Login Link</p>
+	<div id="head-menu-right" class="col-md-6 text-right">
+		<a href="{{url_for('linkedin')}}">
+			<p>Login Link</p>
+		</a>
 	</div>
 </div>
