--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,10 +1,7 @@
 {% extends "main.html" %}
 {% block content %}
-{% include "header.html" %}
 
-<a href="{{url_for('newCategory')}}">New Category</a>
-<br>
-<h3>Categories</h3>
+<h3>Categories</h3><a id="header-link" href="{{url_for('newCategory')}}">New Category</a>
 
 {% for i in categories %}
 <div id="cat-1">
