--- a/templates/main.html
+++ b/templates/main.html
@@ -6,6 +6,11 @@
 		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
 	</head>
 	<body>
+	<div class="header">
+		<div class="container">
+			{% include "header.html" %}
+		</div>
+	</div>
 		<div class="container">
 			{% block content %}
 			{% endblock %}
