Working LinkedIn OAuth log-in

--- a/templates/header.html
+++ b/templates/header.html
@@ -6,7 +6,7 @@
 		</a>
 	</div>
 	<div id="head-menu-right" class="col-md-6 text-right">
-		<a href="{{url_for('linkedin_connect')}}">
+		<a href="{{url_for('linkedin_login')}}">
 			<p>Login Link</p>
 		</a>
 	</div>
