--- a/static/styles.css
+++ b/static/styles.css
@@ -51,3 +51,16 @@ h3 {
 	margin-left: 20px;
 	color: #fff;
 }
+
+.flash {
+	background-color: #98FB98;
+	width:100%;
+	text-decoration: none;
+
+}
+
+.flash li {
+	list-style-type: none;
+	text-align: center;
+
+}
