--- a/templates/main.html
+++ b/templates/main.html
@@ -6,11 +6,25 @@
 		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
 	</head>
 	<body>
+
 	<div class="header">
 		<div class="container">
 			{% include "header.html" %}
 		</div>
 	</div>
+
+	<div class = 'flash'>
+		{% with messages = get_flashed_messages() %}
+			{% if messages %}
+				<ul>
+				{% for message in messages %}
+					<li> <strong> {{ message }} </strong> </li>
+				{% endfor %}
+				</ul>
+			{% endif %}
+		{% endwith %}
+	</div>
+
 		<div class="container">
 			{% block content %}
 			{% endblock %}
